# solana-bridges

./: .gitignore  Makefile  README.md  default.nix  ethereum-to-solana-config.json  shell.nix  solana-to-ethereum-config.json
client-tool/: .eslintrc.js  build.sh  index.js  node-packages.nix  package-lock.json  package.json  shell.nix
dep/ethereum-rlp/: github.json
dep/gitignore.nix/: github.json
dep/hs-web3/: github.json
dep/nix-thunk/: github.json
dep/nixpkgs/: github.json
dep/solana/: github.json
solana-bridges/: DeploySolanaClient.hs  Main.hs  MainEth.hs  MainEthDeploy.hs  solana-bridges.cabal
solana-bridges/ethereum/: Genesis.json  UTC--2020-09-17T02-34-16.613Z--0xabc6bbd0ad6aca2d25380fc7835fe088e7690c2c
solana-bridges/ethereum-client/: .gitignore  Cargo.toml  build.sh  deploy.sh  storage.sh  watch.sh
solana-bridges/ethereum-client/data/ethash-proof/: mainnet-400000.json  mainnet-400001.json  mainnet-400002.json  mainnet-400003.json  mainnet-400004.json  mainnet-400005.json  mainnet-400006.json  mainnet-400007.json  mainnet-400008.json  mainnet-400009.json  mainnet-400010.json  mainnet-400011.json  mainnet-400012.json  mainnet-400013.json  mainnet-400014.json  mainnet-400015.json  mainnet-400016.json  mainnet-400017.json  mainnet-400018.json  mainnet-400019.json  mainnet-400020.json  mainnet-400021.json  mainnet-400022.json  mainnet-400023.json  mainnet-400024.json  mainnet-400025.json  mainnet-400026.json  mainnet-400027.json  mainnet-400028.json  mainnet-400029.json  mainnet-400030.json  mainnet-400031.json  mainnet-400032.json  mainnet-400033.json  mainnet-400034.json  mainnet-400035.json  mainnet-400036.json  mainnet-400037.json  mainnet-400038.json  mainnet-400039.json  (+61 more)
solana-bridges/ethereum-client/src/: epoch_roots.rs  eth.rs  instruction.rs  ledger_ring_buffer.rs  lib.rs  parameters.rs  pow_proof.rs  processor.rs  prove.rs  tests.rs  types.rs
solana-bridges/ethereum-client/src/tests/: blocks.rs  ethash_proof.rs  inclusion.rs  relayer_runs.rs
solana-bridges/solana/: genesis.tar.bz2
solana-bridges/solana-client/: SolanaClient.sol  build.sh  estimageGas.sh  watch.sh
solana-bridges/solana-ethereum-client/: .gitignore  Cargo.toml  build.sh  noop.sh  watch.sh
solana-bridges/solana-ethereum-client/src/: eth.rs  instruction.rs  lib.rs  parameters.rs  processor.rs  prove.rs  tests.rs  types.rs
solana-bridges/solana-ethereum-client/src/tests/: blocks.rs  inclusion.rs  relayer_runs.rs
solana-bridges/solidity/: SolanaClient.sol  build.sh  helloWorld.sol  watch.sh
solana-bridges/src-bin/: GenerateSolanaGenesis.hs  RelayEthereumToSolana.hs  RelaySolanaToEthereum.hs  RunEthereumTestnet.hs  RunSolanaTestnet.hs
solana-bridges/src/Ethereum/: Contracts.hs  SolanaClient.abi
solana-bridges/src/Ethereum/Contracts/: Abi.hs  Bindings.hs  Dist.hs  TH.hs
solana-bridges/src/Solana/: RPC.hs  Relayer.hs  Types.hs  Utils.hs
solana-bridges/test/: Main.hs
solana-bridges/test-extras/: ed25519-low-level-tests.txt  ed25519-test-sign.py  ed25519.py  ed25519_optimised.py  ed25519_orig.py  sign.input.short
solana-client-tool/: default.nix  index.js  node-packages.nix
