cabal-version:       >=1.10

name:                solana-bridges
version:             0.1.0.0
author:              Obsidian Systems LLC
maintainer:          maintainer@obsidian.systems
build-type:          Simple

library
  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules: Solana.Relayer
                 , Solana.Types

  build-depends:       base >=4.13 && <4.14
                     , aeson
                     , async
                     , base16-bytestring
                     , base58-bytestring
                     , base64-bytestring
                     , bytestring
                     , binary
                     , containers
                     , data-default
                     , exceptions
                     , directory
                     , lens
                     , lens-aeson
                     , mtl
                     , ethereum-rlp
                     , process
                     , process-extras
                     , time
                     , temporary
                     , text
                     , unix
                     , web3
                     , which
                     , websockets
                     , network
                     , http-client
                     , http-types
                     , http-client-tls
  ghc-options: -threaded

executable solana-bridges
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >=4.13 && <4.14
                    , solana-bridges
  ghc-options: -threaded

executable solana-bridges-eth
  main-is:             MainEth.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >=4.13 && <4.14
                    , solana-bridges
  ghc-options: -threaded
