cabal-version:       >=1.10

name:                solana-bridges
version:             0.1.0.0
author:              Obsidian Systems LLC
maintainer:          maintainer@obsidian.systems
build-type:          Simple
extra-source-files:  solana-bridges/solidity/SolanaClient.sol

library
  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules: Solana.Relayer
                 , Solana.Types
                 , Solana.RPC
                 , Ethereum.Contracts
                 , Ethereum.Contracts.Abi

  build-depends:       base >=4.13 && <4.14
                     , aeson
                     , async
                     , base16-bytestring
                     , base58-bytestring
                     , base64-bytestring
                     , bytestring
                     , binary
                     , containers
                     , memory
                     , data-default
                     , exceptions
                     , directory
                     , file-embed
                     , lens
                     , lens-aeson
                     , mtl
                     , ethereum-rlp
                     , network-uri
                     , process
                     , process-extras
                     , time
                     , temporary
                     , text
                     , unix
                     , web3
                     , which
                     , websockets
                     , network
                     , http-client
                     , http-types
                     , http-client-tls

executable relay-ethereum-to-solana
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >=4.13 && <4.14
                     , solana-bridges
  ghc-options: -threaded

executable relay-solana-to-ethereum
  main-is:             RelaySolanaToEthereum.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >=4.13 && <4.14
                     , solana-bridges
  ghc-options: -threaded

executable deploy-solana-client
  main-is:             DeploySolanaClient.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >=4.13 && <4.14
                     , solana-bridges
  ghc-options: -threaded
