cabal-version:       >=1.10

name:                solana-bridges
version:             0.1.0.0
author:              Obsidian Systems LLC
maintainer:          maintainer@obsidian.systems
build-type:          Simple
extra-source-files:  solana-bridges/solidity/SolanaClient.sol

library
  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules: Solana.Relayer
                 , Solana.Types
                 , Solana.RPC
                 , Solana.Utils
                 , Ethereum.Contracts
                 , Ethereum.Contracts.Bindings
                 , Ethereum.Contracts.Dist
                 , Ethereum.Contracts.TH


  build-depends:       base >=4.13 && <4.14
                     , aeson
                     , async
                     , base16-bytestring
                     , base58-bytestring
                     , base64-bytestring
                     , bytestring
                     , binary
                     , cryptonite
                     , containers
                     , constraints
                     , cryptonite
                     , memory
                     , data-default
                     , exceptions
                     , directory
                     , file-embed
                     , lens
                     , lens-aeson
                     , mtl
                     , ethereum-rlp
                     , network-uri
                     , process
                     , process-extras
                     , split
                     , time
                     , template-haskell
                     , th-lift-instances
                     , temporary
                     , transformers
                     , text
                     , unix
                     , web3
                     , which
                     , websockets
                     , network
                     , http-client
                     , http-types
                     , http-client-tls
                     , hspec

executable relay-ethereum-to-solana
  main-is:             RelayEthereumToSolana.hs
  hs-source-dirs:      src-bin
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.13 && <4.14
                     , solana-bridges

executable relay-solana-to-ethereum
  main-is:             RelaySolanaToEthereum.hs
  hs-source-dirs:      src-bin
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.13 && <4.14
                     , solana-bridges

executable deploy-solana-client
  main-is:             DeploySolanaClient.hs
  hs-source-dirs:      src-bin
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.13 && <4.14
                     , solana-bridges

executable run-ethereum-testnet
  main-is:             RunEthereumTestnet.hs
  hs-source-dirs:      src-bin
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.13 && <4.14
                     , solana-bridges

executable run-solana-testnet
  main-is:             RunSolanaTestnet.hs
  hs-source-dirs:      src-bin
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.13 && <4.14
                     , solana-bridges

executable generate-solana-genesis
  main-is:             GenerateSolanaGenesis.hs
  hs-source-dirs:      src-bin
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.13 && <4.14
                     , solana-bridges

test-suite contracts
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options:  -Wall -threaded
  build-depends: base
               , solana-bridges
               , async
               , bytestring
               , containers
               , cryptonite
               , data-default
               , hspec
               , hspec-expectations
               , HUnit
               , memory
               , mtl
               , web3
