[package]
name = "solana-ethereum-client"
version = "0.0.1"
description = "Ethereum light client for Solana"
authors = ["Obsidian Systems LLC <maintainer@obsidian.systems>"]
repository = "https://github.com/obsidiansystems/solana-bridges"
#license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
program = ["solana-sdk/program"]

[dependencies]
solana-program = { version = "=1.4.8", default-features = false }
solana-sdk = { version = "=1.4.8", default-features = false }
getrandom = { version = "0.1.14", features = ["dummy"] }
rlp = "0.4.5"
rlp-derive = "0.1.0"
hex = "0.4.2"
arrayref = "0.3.6"
ethereum-types = "0.9.2"
ethash = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex-literal = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

[patch.crates-io.ethash]
git = "https://github.com/obsidiansystems/ethash"
branch = "solana"

[patch.crates-io.parity-scale-codec]
git = "https://github.com/obsidiansystems/parity-scale-codec"
branch = "solana"

[patch.crates-io.rlp]
git = "https://github.com/obsidiansystems/parity-common"
branch = "solana"

[patch.crates-io.uint]
git = "https://github.com/obsidiansystems/parity-common"
branch = "solana"

[lib]
name = "solana_ethereum_client"
crate-type = ["cdylib", "lib"]
