[package]
name = "solana-ethereum-client"
version = "0.0.1"
description = "Ethereum light client for Solana"
authors = ["Obsidian Systems LLC <maintainer@obsidian.systems>"]
repository = "https://github.com/obsidiansystems/solana-bridges"
#license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
skip-no-mangle = ["solana-sdk/skip-no-mangle"]
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
solana-sdk = { version = "=1.3.12", default-features = false, optional = true }
getrandom = { version = "0.1.14", features = ["dummy"] }
rlp = "0.4.5"
rlp-derive = "0.1.0"
hex = "0.4.2"
arrayref = "0.3.6"
ethereum-types = { version = "0.9.2" }
ethash = { git = "https://github.com/nearprotocol/rust-ethash", branch = "upgrade-eth-types" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex-literal = "0.2.1"

[patch.crates-io]
parity-scale-codec = { git = "https://github.com/obsidiansystems/parity-scale-codec", rev = "2290261cd3cc9df22493452e10cf3ed44a417b25" }
uint = { git = "https://github.com/obsidiansystems/parity-common", rev = "eb39309c64e5c42f124744fc2d887f2f4648bbd8" }

[lib]
name = "solana_ethereum_client"
crate-type = ["cdylib", "lib"]
